Fix more filters align #395

--- a/public/stylesheets/searcher.styl
+++ b/public/stylesheets/searcher.styl
@@ -56,7 +56,7 @@
         .filter-title
             font-weight: bold
             border-bottom: none !important
-            justify-content: end;
+            justify-content: flex-start !important
 
         .dropdown-menu
             transform: none !important
