--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -963,7 +963,7 @@ input[type=submit].landing-search-inputtext {
 .filters .dropdown-menu-morefilters .filter-title {
   font-weight: bold;
   border-bottom: none !important;
-  justify-content: end;
+  justify-content: flex-start !important;
 }
 .filters .dropdown-menu-morefilters .dropdown-menu {
   transform: none !important;
